<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.victim.chatsapp.password">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backc">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/abc"
            android:layout_above="@+id/usernamela"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="28dp" />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/usernamela"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp"
            android:layout_above="@+id/submit"
            android:layout_alignParentStart="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/submit"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="16dp"
                android:hint="@string/enter_your_username1"
                android:inputType="text"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/submit"
            android:layout_above="@+id/textView4"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/your_password_is"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:layout_above="@+id/pass"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/your_password_will_appear_here"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="87dp" />



    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
